# obs-cleanstream

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  patch_libobs.diff
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: .Aptfile  .Brewfile.lock.json  .build.zsh  .package.zsh  Package-Windows.ps1
.github/workflows/: build-project.yaml  docker.yml  flatpak.yml  main.yml  push.yaml
ci/flatpak/: com.obsproject.Studio.Plugin.cleanstream.metainfo.xml  com.obsproject.Studio.Plugin.cleanstream.yaml
cmake/: BuildWhispercpp.cmake  FetchOnnxruntime.cmake  FindLibAv.cmake  ObsPluginHelpers.cmake
cmake/bundle/macos/: Distribution.xml
cmake/bundle/windows/: installer-Windows.iss.in
cmake/common/: buildspec_common.cmake  compiler_common.cmake
cmake/macos/: compilerconfig.cmake
cmake/windows/: compilerconfig.cmake
data/locale/: en-US.ini
docs/: BUG-REPORTING.md  BUILDING-OPENSUSE.md
src/: audio-filter.cpp  cleanstream-filter-data.h  cleanstream-filter.c  cleanstream-filter.cpp  cleanstream-filter.h  plugin-macros.generated.h  plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin-support.h
src/audio-utils/: read-audio-file.cpp  read-audio-file.h  read_audio_file.cpp
src/model-utils/: model-downloader-ui.cpp  model-downloader-ui.h  model-downloader.cpp  model-downloader.h  model-infos.cpp
src/whisper-utils/: silero-vad-onnx.cpp  whisper-language.h  whisper-processing.cpp  whisper-processing.h  whisper-utils.cpp  whisper-utils.h
